# device_soc_rockchip

./: .gitattributes  BUILD.gn  CODEOWNERS  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md
common/: README.en.md  README.md
common/sdk_linux/: Makefile
hardware/: BUILD.gn
hardware/codec/: BUILD.gn
rk2206/: BUILD.gn  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  README_zh.md  board.gni
rk2206/sdk_liteos/platform/startup/: BUILD.gn  build.sh  startup_rk2206.S
rk3399/: EULA  README.md  README_zh.md  soc.gni
rk3566/: NOTICE  README.md  soc.gni
rk3566/hardware/isp/: BUILD.gn
rk3568/: soc.gni
rk3568/hardware/codec/: BUILD.gn
rk3568/hardware/codec/include/: hdi_mpp.h  hdi_mpp_config.h
rk3568/hardware/codec/jpeg/: BUILD.gn
rk3568/hardware/codec/jpeg/include/: codec_jpeg_impl.h  codec_log_wrapper.h
rk3568/hardware/codec/jpeg/src/: codec_jpeg_decoder.cpp  codec_jpeg_helper.cpp  codec_jpeg_impl.cpp  codec_jpeg_interface.cpp
rk3568/hardware/codec/src/: hdi_mpp.c  hdi_mpp_config.c  hdi_mpp_mpi.c
rk3568/hardware/display/: BUILD.gn
rk3568/hardware/display/include/: display_common.h
rk3568/hardware/display/src/display_device/: display_composer_vdi_impl.cpp  display_composer_vdi_impl.h  display_gfx.h  drm_connector.cpp  drm_crtc.cpp  drm_device.cpp  drm_display.cpp  drm_encoder.cpp  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_gfx_composition.cpp  hdi_gfx_composition.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_session.cpp  hdi_session.h
rk3568/hardware/display/src/display_gfx/: display_gfx.c
rk3568/hardware/display/src/display_gralloc/: display_buffer_vdi_impl.cpp  display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.cpp  display_gralloc_gbm.h  hi_gbm.c  hi_gbm.cpp  hi_gbm.h  hi_gbm_internal.h
rk3568/hardware/mpp/mpp/legacy/: BUILD.gn  my_log.h  ppOp.cpp  ppOp.h  rk_list.cpp  rk_list.h  vpu.c  vpu_api.cpp  vpu_api_legacy.cpp  vpu_api_legacy.h  vpu_api_mlvec.cpp  vpu_api_mlvec.h  vpu_mem_legacy.c  vpu_mem_legacy.h
rk3568/hardware/mpp/mpp/legacy/inc/: mpp_2str.h  mpp_bitput.h  mpp_bitread.h  mpp_bitwrite.h  mpp_buf_slot.h  mpp_buffer_impl.h  mpp_cluster.h  mpp_dec_cb_param.h  mpp_dec_cfg_impl.h  mpp_enc_cfg_impl.h  mpp_enc_ref.h  mpp_enc_refs.h  mpp_frame_impl.h  mpp_meta_impl.h  mpp_packet_impl.h  mpp_task_impl.h  mpp_trie.h
rk3568/hardware/omx_il/: BUILD.gn  rk_omx.gni
rk3568/hardware/omx_il/component/common/: BUILD.gn  Rockchip_OMX_Basecomponent.c  Rockchip_OMX_Basecomponent.h  Rockchip_OMX_Baseport.c  Rockchip_OMX_Baseport.h  Rockchip_OMX_Resourcemanager.c  omx_video_global.h
rk3568/hardware/omx_il/component/video/dec/: BUILD.gn  RkOMX_Core.h  Rkvpu_OMX_Vdec.c  Rkvpu_OMX_Vdec.h  Rkvpu_OMX_VdecControl.c  Rkvpu_OMX_VdecControl.h  library_register.c
rk3568/hardware/omx_il/component/video/enc/: BUILD.gn  Rkvpu_OMX_Venc.c  Rkvpu_OMX_Venc.h  Rkvpu_OMX_VencControl.c  Rkvpu_OMX_VencControl.h  library_register.c
rk3568/hardware/omx_il/core/: BUILD.gn  Rockchip_OMX_Component_Register.c  Rockchip_OMX_Component_Register.h  Rockchip_OMX_Core.c  Rockchip_OMX_Core.h
rk3568/hardware/omx_il/include/khronos/: IndexExt.h  OtherExt.h  VideoExt.h
rk3568/hardware/omx_il/include/librkvpu/: vpu.h  vpu_api_private_cmd.h  vpu_global.h  vpu_macro.h  vpu_mem.h  vpu_mem_pool.h  vpu_type.h
rk3568/hardware/omx_il/include/rockchip/: Rockchip_OMX_Def.h  Rockchip_OMX_Macros.h
rk3568/hardware/omx_il/libOMXPlugin/: BUILD.gn  IOMXComponentMgr.h  OMXPlugin.cpp  OMXPlugin.h
rk3568/hardware/omx_il/osal/: BUILD.gn  Rockchip_OSAL_ColorUtils.h  Rockchip_OSAL_ETC.c  Rockchip_OSAL_ETC.h  Rockchip_OSAL_Env.c  Rockchip_OSAL_Env.h  Rockchip_OSAL_Event.c  Rockchip_OSAL_Event.h  Rockchip_OSAL_Library.h  Rockchip_OSAL_Log.c  Rockchip_OSAL_Log.h  Rockchip_OSAL_Memory.c  Rockchip_OSAL_Memory.h  Rockchip_OSAL_Mutex.h  Rockchip_OSAL_OHOS.cpp  Rockchip_OSAL_OHOS.h  Rockchip_OSAL_Queue.c  Rockchip_OSAL_Queue.h  Rockchip_OSAL_RGA_Process.c  Rockchip_OSAL_RGA_Process.h  Rockchip_OSAL_Semaphore.c  Rockchip_OSAL_Semaphore.h  Rockchip_OSAL_SharedMemory.c  Rockchip_OSAL_SharedMemory.h  Rockchip_OSAL_Thread.h
rk3588/: NOTICE  soc.gni
rk3588/hardware/codec/jpeg/: BUILD.gn
rk3588/hardware/codec/jpeg/include/: codec_jpeg_decoder.h  codec_jpeg_helper.h  codec_scope_guard.h
rk3588/hardware/codec/jpeg/src/: codec_jpeg_decoder.cpp
rk3588/hardware/gpu/: BUILD.gn
rk3588/hardware/isp/: BUILD.gn  rk3588-ispserver以及依赖共享库溯源和编译说明.md
rk3588/hardware/isp/bin64/: ispserver
rk3588/hardware/isp/camera_engine_rkaiq_linux/: BUILD.gn  RkAiqManager.cpp  git_log.txt
rk3588/hardware/isp/camera_engine_rkaiq_linux/aiq_core/: RkAiqCore.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/algos/: BUILD.gn
rk3588/hardware/isp/camera_engine_rkaiq_linux/algos/aldch/: rk_aiq_algo_aldch_itf.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/algos_camgroup/: BUILD.gn
rk3588/hardware/isp/camera_engine_rkaiq_linux/algos_camgroup/ae/: BUILD.gn
rk3588/hardware/isp/camera_engine_rkaiq_linux/algos_camgroup/awb/: BUILD.gn
rk3588/hardware/isp/camera_engine_rkaiq_linux/common/media_buffer/: media_buffer_pool.c
rk3588/hardware/isp/camera_engine_rkaiq_linux/common/mediactl/: mediactl.c
rk3588/hardware/isp/camera_engine_rkaiq_linux/hwi/fakecamera/: FakeSensorHw.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/include/algos/af/: rk_aiq_types_af_algo.h
rk3588/hardware/isp/camera_engine_rkaiq_linux/include/iq_parser_v2/j2s/: j2s_generated_v21.h  j2s_generated_v30.h
rk3588/hardware/isp/camera_engine_rkaiq_linux/iq_parser_v2/: BUILD.gn
rk3588/hardware/isp/camera_engine_rkaiq_linux/iq_parser_v2/j2s/: cJSON.c  j2s_utils.c
rk3588/hardware/isp/camera_engine_rkaiq_linux/rkaiq_3A_server/: BUILD.gn  rkaiq_3A_server.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/tools/iq_check/: cmd.sh
rk3588/hardware/isp/camera_engine_rkaiq_linux/uAPI/: rk_aiq_user_api_sysctl.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/uAPI2/: rk_aiq_user_api2_wrapper.cpp
rk3588/hardware/isp/camera_engine_rkaiq_linux/xcore/: xcam_log.cpp
(+824 files in other folders)
