# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ISP_DIR = "//device/soc/rockchip/rk3566/hardware/isp"

ohos_prebuilt_shared_library("librkaiq") {
  if (target_cpu == "arm") {
    source = "../../../common/hardware/isp/lib/librkaiq.z.so"
  } else {
    source = "../../../common/hardware/isp/lib64/librkaiq.z.so"
  }
  install_images = [ chipset_base_dir ]
  subsystem_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("gc8034_RK-CMK-8M-2-v1_CK8401") {
  source = "../../../common/hardware/isp/etc/iqfiles/gc8034_RK-CMK-8M-2-v1_CK8401.json"
  relative_install_dir = "iqfiles"
  install_images = [ chipset_base_dir ]
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("iqfil") {
  source = "$ISP_DIR/etc/iqfil.json"
  relative_install_dir = ""
  install_images = [ chipset_base_dir ]
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_executable("ispserver") {
  if (target_cpu == "arm") {
    source = "../../../common/hardware/isp/bin/ispserver"
  } else {
    source = "../../../common/hardware/isp/bin64/ispserver"
  }
  install_images = [ chipset_base_dir ]
  part_name = "kaihong_products"
  install_enable = true
}

group("isp") {
  deps = [
    ":gc8034_RK-CMK-8M-2-v1_CK8401",
    ":iqfil",
    ":ispserver",
    ":librkaiq",
  ]
}
