# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_prebuilt_shared_library("libOMX_Core") {
  if (target_cpu == "arm64") {
    source = "lib64/libOMX_Core.z.so"
  }
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_shared_library("libOMX_Pluginhw") {
  if (target_cpu == "arm64") {
    source = "lib64/libOMX_Pluginhw.z.so"
  }
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_shared_library("libomxvpu_dec") {
  if (target_cpu == "arm64") {
    source = "lib64/libomxvpu_dec.z.so"
  }
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_shared_library("libomxvpu_enc") {
  if (target_cpu == "arm64") {
    source = "lib64/libomxvpu_enc.z.so"
  }
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_shared_library("libRkOMX_Resourcemanager") {
  if (target_cpu == "arm64") {
    source = "lib64/libRkOMX_Resourcemanager.z.so"
  }
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

group("omx_il") {
  deps = [
    ":libOMX_Core",
    ":libOMX_Pluginhw",
    ":libRkOMX_Resourcemanager",
    ":libomxvpu_dec",
    ":libomxvpu_enc",
  ]
}
