# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("libmali-g610-ohos") {
  include_dirs = [ "include" ]
  cflags = [
    "-Wno-incompatible-pointer-types",
    "-Werror",
    "-Wimplicit-function-declaration",
    "-Wno-error=unused-variable",
  ]
  cflags = []
}

ohos_prebuilt_shared_library("mali-g610-ohos") {
  if (target_cpu == "arm") {
    source = "lib/libmali-g610-ohos.so"
  } else if (target_cpu == "arm64") {
    source = "lib64/libmali-g610-ohos.so"
  }

  # [TODO]:decoupling system.img and vendor.img
  # install_images = [ chipset_base_dir ]
  # relative_install_dir = "chipsetsdk"
  # revert
  install_images = [ system_base_dir ]
  subsystem_name = "device_rk3588"
  part_name = "device_rk3588"
  install_enable = true
  symlink_target_name = [
    "libEGL_impl.so",
    "libGLESv1_impl.so",
    "libGLESv2_impl.so",
    "libGLESv3_impl.so",
    "libmali.so.0",
    "libmali.so.1",
  ]
}

ohos_prebuilt_shared_library("firmware") {
  source = "firmware/mali_csffw.bin"
  module_install_dir = "lib/firmware/"
  install_images = [ system_base_dir ]
  subsystem_name = "device_rk3588"
  part_name = "device_rk3588"
  install_enable = true
}
