# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ISP_DIR = "//device/soc/rockchip/rk3588/hardware/isp"

ohos_prebuilt_shared_library("librkaiq") {
  source = "$ISP_DIR/lib64/librkaiq.z.so"
  install_images = [ chipset_base_dir ]
  subsystem_name = "device_rk3588"
  install_enable = true
}

ohos_prebuilt_etc("ov13855_CMK-OT2016-FV1_default.json") {
  source = "$ISP_DIR/etc/iqfiles/ov13855_CMK-OT2016-FV1_default.json"
  relative_install_dir = "iqfiles"
  install_images = [ chipset_base_dir ]
  part_name = "device_rk3588"
  install_enable = true
}

ohos_prebuilt_etc("iqfil") {
  source = "$ISP_DIR/etc/iqfil.json"
  relative_install_dir = ""
  install_images = [ chipset_base_dir ]
  part_name = "device_rk3588"
  install_enable = true
}

ohos_prebuilt_executable("ispserver") {
  source = "$ISP_DIR/bin64/ispserver"
  install_images = [ chipset_base_dir ]
  part_name = "device_rk3588"
  install_enable = true
}

group("isp") {
  deps = [
    ":iqfil",
    ":ispserver",
    ":librkaiq",
    ":ov13855_CMK-OT2016-FV1_default.json",
  ]
}
