# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/rockchip/rk3568/hardware/omx_il/rk_omx.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_shared_library("libOMX_Core") {
  sources = [
    "Rockchip_OMX_Component_Register.c",
    "Rockchip_OMX_Core.c",
  ]
  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/rockchip",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common",
    "//third_party/openmax/api/1.1.2",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
  ]

  deps = [
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common:RkOMX_Basecomponent",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common:libRkOMX_Resourcemanager",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_codec"
}
