# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_shared_library("libOMX_Pluginhw") {
  sources = [ "OMXPlugin.cpp" ]
  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//commonlibrary/c_utils/base/include",
    "//device/soc/rockchip/rk3568/hardware/rga/include",
    "//third_party/openmax/api/1.1.2",
    "//drivers/hdf_core/framework/include/utils",
  ]

  cflags_cc = [
    "-Wall",
    "-Wextra",
    "-Werror",
  ]

  deps = [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_codec"
}
