# Copyright (C) 2021-2023 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/rockchip/rk3568/hardware/omx_il/rk_omx.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_static_library("RkOMX_OSAL") {
  sources = [
    "Rockchip_OSAL_ColorUtils.cpp",
    "Rockchip_OSAL_ETC.c",
    "Rockchip_OSAL_Env.c",
    "Rockchip_OSAL_Event.c",
    "Rockchip_OSAL_Library.c",
    "Rockchip_OSAL_Log.c",
    "Rockchip_OSAL_Memory.c",
    "Rockchip_OSAL_Mutex.c",
    "Rockchip_OSAL_OHOS.cpp",
    "Rockchip_OSAL_Queue.c",
    "Rockchip_OSAL_RGA_Process.c",
    "Rockchip_OSAL_Semaphore.c",
    "Rockchip_OSAL_SharedMemory.c",
    "Rockchip_OSAL_Thread.c",
  ]

  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/mpp/mpp/legacy",
    "//device/soc/rockchip/rk3568/hardware/mpp/include",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/video/dec",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/video/enc",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/rockchip",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/librkvpu",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/librkvpu",
    "//device/soc/rockchip/rk3568/hardware/rga/include",
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//third_party/libdrm/include/drm",
    "//third_party/openmax/api/1.1.2",
    "//commonlibrary/c_utils/base/include",
  ]
  defines = [
    "AVS100",
    "OHOS",
  ]
  cflags = [
    "-Wno-implicit-function-declaration",
    "-Wno-unused-variable",
  ]

  cflags_cc = [
    "-Wno-implicit-function-declaration",
    "-Wno-unused-variable",
    "-Wno-format",
    "-Wno-switch",
  ]

  if (USE_AFBC) {
    defines += [ "SUPPORT_AFBC" ]
  }

  if (USE_GPU) {
    defines += [ "ROCKCHIP_GPU_LIB_ENABLE" ]
  }

  if (USE_RGA) {
    defines += [ "SUPPORT_RGA" ]
  }
  if (USE_AVS80) {
    defines += [ "AVS80" ]
  }
  defines += [ "OHOS_BUFFER_HANDLE" ]

  deps =
      [ "//device/soc/rockchip/rk3568/hardware/mpp/mpp/legacy:librockchip_vpu" ]

  external_deps = [
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}
