# Copyright (c) 2023 Shenzhen Kaihong DID Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
HARDWARE_PATH = "../../"
ohos_shared_library("libjpeg_vdi_interface") {
  include_dirs = [
    "include",
    "//drivers/hdf_core/interfaces/inner_api/osal/uhdf",
    "//drivers/hdf_core/interfaces/inner_api/utils",
    "//drivers/peripheral/codec/image/vdi",
    "//drivers/peripheral/codec/utils/include",
    "//drivers/peripheral/display/interfaces/include",
    "${HARDWARE_PATH}/codec/include",
    "${HARDWARE_PATH}/mpp/include",
    "${HARDWARE_PATH}/rga/include",
    "${hdf_framework_path}/include/utils",
    "$hdf_uhdf_path/osal/include",
  ]
  sources = [
    "${HARDWARE_PATH}/codec/src/hdi_mpp_mpi.c",
    "src/codec_jpeg_decoder.cpp",
    "src/codec_jpeg_helper.cpp",
    "src/codec_jpeg_interface.cpp",
  ]
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "graphic_surface:buffer_handle",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  defines = [ "LOG_TAG_IMAGE" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "device_rk3588"
}
